[project]
name = "comfyui-chaser-nodes"
version = "0.1.0"
description = "Chaser's personal ComfyUI custom node repo"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "av>=15.0.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sexpdata>=1.0.2",
    "torch>=2.8.0",
]

[project.urls]
Repository = "https://github.com/chaserhkj/ComfyUI-Chaser-nodes"

[tool.comfy]
PublisherId = "chaserhkj"
DisplayName = "Chaser's Custom Nodes" 

[tool.pyright]
reportUnknownMemberType   = "hint"
reportUnknownArgumentType = "hint"
reportUnknownVariableType = "hint"
reportUnknownReturnType   = "hint"
reportUnknownParameterType= "hint"
reportUnknownFunctionType = "hint"
reportUnknownCallType     = "hint"

